unpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Education</fullName>
        <description>Process for Education</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Dead</fullName>
        </values>
        <values>
            <fullName>Dead - No Response</fullName>
        </values>
        <values>
            <fullName>Dead - Per customer</fullName>
        </values>
        <values>
            <fullName>Presenting</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales</fullName>
        <description>Sales Process for direct and distributor</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Cost Savings Analysis</fullName>
        </values>
        <values>
            <fullName>Dead</fullName>
        </values>
        <values>
            <fullName>Dead - No Response</fullName>
        </values>
        <values>
            <fullName>Dead - Per customer</fullName>
        </values>
        <values>
            <fullName>Presenting</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Quoting</fullName>
        </values>
        <values>
            <fullName>Trial %2F Demo</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Domestic_Export__c</fullName>
        <description>Is this domestic or export. Replaces existing record types of same names.</description>
        <label>Domestic/Export</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Domestic_Export</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_Type__c</fullName>
        <description>The type of education being presented.</description>
        <label>Education Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Presentation</fullName>
                </value>
                <value>
                    <fullName>Product Presentation At Event</fullName>
                </value>
                <value>
                    <fullName>Product Presentation After Event</fullName>
                </value>
                <value>
                    <fullName>CE - Continuing Education</fullName>
                </value>
                <value>
                    <fullName>CE At Event</fullName>
                </value>
                <value>
                    <fullName>CE After Event</fullName>
                </value>
                <value>
                    <fullName>Basis of Design</fullName>
                </value>
                <value>
                    <fullName>Office Master Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iCapture_Comments__c</fullName>
        <description>Holds data from iCapture record uploads</description>
        <label>iCapture Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <businessProcess>Education</businessProcess>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Direct</fullName>
        <active>true</active>
        <businessProcess>Sales</businessProcess>
        <label>Sales - Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Distributor</fullName>
        <active>true</active>
        <businessProcess>Sales</businessProcess>
        <label>Sales - Distributor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>